@@ -15,6 +15,8 @@ Anschließend kann diese Liste wieder geleert werden.
 ** Zertifikatseinreichung
 * Monitoring:
 ** die Ping-Latenz zum UGW und zum VPN-Tunnel-Gateway ist via munin auswertbar
+* Status-Anzeige:
+** UGW/Spender: Anzahl der weitergeleiteten Nutzerverbindungen wird angezeigt
 * Fehlerkorrekturen:
 ** POE-Passthrough-Umschalter funktioniert nun
 ** UGW: Korrektur der Ermittlung und Announcierung der Uplink-Bandbreite
